--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
       "php": ">=5.3.0"
    },
    "require-dev": {
-      "phpunit/phpunit": "^4.8",
-      "phpunit/php-code-coverage": "^2.2",
+      "phpunit/phpunit": "10",
+      "phpunit/php-code-coverage": "10",
       "squizlabs/php_codesniffer": "1.4.8"
    },
    "autoload": {
