--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,12 @@
 {
    "name": "klein/klein",
    "description": "A lightning fast router for PHP",
-   "keywords": ["router", "routing", "sinatra", "boilerplate"],
+   "keywords": [
+      "router",
+      "routing",
+      "sinatra",
+      "boilerplate"
+   ],
    "homepage": "https://github.com/klein/klein.php",
    "license": "MIT",
    "authors": [
@@ -24,7 +29,7 @@
    "require-dev": {
       "phpunit/phpunit": "10",
       "phpunit/php-code-coverage": "10",
-      "squizlabs/php_codesniffer": "1.4.8"
+      "squizlabs/php_codesniffer": "3.7.2"
    },
    "autoload": {
       "psr-4": {
