--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
    "require-dev": {
       "phpunit/phpunit": "10",
       "phpunit/php-code-coverage": "10",
-      "squizlabs/php_codesniffer": "3.7.2"
+      "squizlabs/php_codesniffer": "3.7.2",
+      "phpstan/phpstan": "^1.11",
+      "vimeo/psalm": "^5.25"
    },
    "autoload": {
       "psr-4": {
