Add github security scan support for phpstan

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,3 +5,11 @@ parameters:
     paths:
         - src
         - tests
+
+services:
+    errorFormatter.sarif:
+        class: PHPStanSarifErrorFormatter\SarifErrorFormatter
+        arguments:
+            relativePathHelper: @simpleRelativePathHelper
+            currentWorkingDirectory: %currentWorkingDirectory%
+            pretty: true
