--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
       }
    ],
    "require": {
-      "php": ">=8.1.0"
+      "php": ">=8.1.0",
+      "jbelien/phpstan-sarif-formatter": "^1.0"
    },
    "require-dev": {
       "phpunit/phpunit": "10",
