--- a/.github/workflows/phpstan.yaml
+++ b/.github/workflows/phpstan.yaml
@@ -3,9 +3,12 @@ name: PHPStan Security Scan
 on: [push]
 
 jobs:
-  build:
+  phpstan-security-scan:
     runs-on: ubuntu-latest
-
+    permissions:
+      security-events: write
+      actions: read
+      contents: read
     steps:
       - uses: actions/checkout@v4
 
@@ -20,7 +23,7 @@ jobs:
         continue-on-error: true
 
       - name: Upload Security Analysis results into GitHub Security Code Scanning
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: results.sarif
-          wait-for-processing: true
+          category: PHPStan
