--- a/.github/workflows/psalm.yaml
+++ b/.github/workflows/psalm.yaml
@@ -6,6 +6,10 @@ jobs:
   psalm-security-scan:
     name: Psalm
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write
+      actions: read
+      contents: read
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -14,6 +18,7 @@ jobs:
         uses: docker://ghcr.io/psalm/psalm-security-scan
         
       - name: Import Security Analysis results into GitHub Security Code Scanning
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: results.sarif
+          category: Psalm
