--- a/.github/workflows/psalm.yaml
+++ b/.github/workflows/psalm.yaml
@@ -16,6 +16,9 @@ jobs:
 
       - name: Psalm Security Scan
         uses: docker://ghcr.io/psalm/psalm-security-scan
+        with:
+          security_analysis: true
+          report_file: results.sarif
         
       - name: Import Security Analysis results into GitHub Security Code Scanning
         uses: github/codeql-action/upload-sarif@v3
