--- a/.github/workflows/psalm.yaml
+++ b/.github/workflows/psalm.yaml
@@ -14,11 +14,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Validate composer.json
+        run: composer validate
+
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-progress --no-suggest --dev
+
       - name: Psalm Security Scan
-        uses: docker://ghcr.io/psalm/psalm-security-scan
-        with:
-          security_analysis: true
-          report_file: results.sarif
+        run: ./vendor/bin/psalm --report=results.sarif
+        continue-on-error: true
         
       - name: Import Security Analysis results into GitHub Security Code Scanning
         uses: github/codeql-action/upload-sarif@v3
